<resources>
    <string name="app_name">Core</string>
    <string name="input_carnum">请输入车牌号</string>
    <string name="ok">确定</string>
    <string name="empty">清空</string>
    <string name="idcard_jsz">身份证/驾驶证</string>
    <string name="input">请输入</string>
    <string name="input_key">请输入关键字</string>
    <string name="cancel">取消</string>
    <string name="menu">菜单</string>
    <string name="letter_number">字母/数字</string>
    <string name="vio_address">违法地址</string>
    <string name="prompt">提示</string>
    <string name="input_road">道路代码/道路名称</string>
    <string name="input_road_section">路段代码/路段名称</string>
    <string name="dldm">道路代码</string>
    <string name="lddm">路段代码</string>
    <string name="ddms">地点米数</string>
    <string name="personal_collect">个人收藏</string>
    <string name="vio_action">违法行为</string>
    <string name="input_vio_action">违法行为代码/违法行为名称</string>
    <string name="删除">delete</string>
</resources>
