<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:app="http://schemas.android.com/apk/res-auto"
              android:id="@+id/linearlayout_input_carnum_parent"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:gravity="bottom"
              android:orientation="vertical">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/y48"
        android:background="@drawable/bg_border_b_white_grey"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/imageview_menu_cancel"
            android:layout_width="@dimen/x18"
            android:layout_height="@dimen/y18"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="@dimen/x16"
            android:layout_marginRight="@dimen/x16"
            android:scaleType="centerInside"
            android:src="@drawable/dialog_menu_cancel"/>

        <TextView
            android:id="@+id/textview_menu_title"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="号牌种类"
            android:textColor="@color/blue"
            android:textSize="@dimen/sp16"/>

        <TextView
            android:id="@+id/textview_menu_submit"
            android:layout_width="@dimen/x50"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/ok"
            android:textColor="@color/color_black_blue"
            android:textSize="@dimen/sp16"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/y350"
        android:background="@android:color/white"
        android:orientation="vertical">

        <cn.trustway.nb.core.search.view.ViewSearch
            android:id="@+id/search_menu_search"
            android:layout_width="match_parent"
            android:layout_height="@dimen/y40"
            android:layout_margin="@dimen/x10"
            app:bg="@drawable/bg_border_circle_trans_eaeaea_20"
            app:msgHint="@string/input_key"
            />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/y40"
            android:background="@drawable/bg_border_b_white_grey"
            android:gravity="right|center_vertical">

            <TextView
                android:id="@+id/textview_menu_empty"
                android:layout_width="@dimen/x50"
                android:layout_height="match_parent"
                android:gravity="center|right"
                android:text="@string/empty"
                android:paddingRight="@dimen/x10"
                android:textSize="@dimen/sp14"/>
        </LinearLayout>

        <cn.trustway.nb.core.base.view.TrustwayRecycleView
            android:id="@+id/recycleview_menu_content"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/grey"
            android:layout_marginTop="@dimen/y10"/>
    </LinearLayout>


</LinearLayout>