<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:id="@+id/linearlayout_input_carnum_parent"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:gravity="bottom"
        android:orientation="vertical">


        <LinearLayout
            android:background="@drawable/bg_border_b_white_grey"
            android:layout_width="match_parent"
            android:layout_height="@dimen/y48"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:paddingLeft="@dimen/y14">

            <ImageView
                android:id="@+id/imageview_letter_number_cancel"
                android:layout_width="@dimen/x18"
                android:layout_height="@dimen/y18"
                android:scaleType="centerInside"
                android:src="@drawable/dialog_menu_cancel"/>

            <TextView
                android:layout_width="0dp"
                android:layout_height="@dimen/y48"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/letter_number"
                android:textColor="@color/blue"
                android:textSize="16sp"/>

            <TextView
                android:id="@+id/textview_letter_number_ok"
                android:layout_width="@dimen/x50"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="@string/ok"
                android:textColor="@color/btn_black_blue"
                android:textSize="@dimen/sp16"/>
        </LinearLayout>

        <EditText
            android:id="@+id/edittext_letter_number_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/white"
            android:gravity="center|left"
            android:orientation="horizontal"
            android:hint="@string/input"
            android:paddingBottom="@dimen/y30"
            android:paddingLeft="@dimen/x14"
            android:paddingRight="@dimen/x14"
            android:paddingTop="@dimen/y30"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="2px"
            android:background="@color/gray"/>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/y40"
            android:background="@android:color/white"
            android:paddingLeft="@dimen/y14"
            android:paddingRight="@dimen/y14">
            <TextView
                android:id="@+id/textView_letter_number_change"
                android:layout_centerVertical="true"
                android:background="@drawable/btn_white_grey"
                android:text="切换大小写"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
            <TextView
                android:id="@+id/textView_letter_number_empty"
                android:text="清空"
                android:background="@drawable/btn_white_grey"
                android:layout_alignParentRight="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"/>
        </RelativeLayout>
        <android.support.v7.widget.RecyclerView
            android:id="@+id/recycleview_letter_number_keyboard"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/gray"
            android:padding="1px"/>
    </LinearLayout>

    <RelativeLayout
        android:id="@+id/relativelayout_letter_number_prompt"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
    </RelativeLayout>
</RelativeLayout>